Fix for Color Contrast change from window in aquatic, desert, dusk etc

--- a/src/AdminSite/wwwroot/css/admin-custom.css
+++ b/src/AdminSite/wwwroot/css/admin-custom.css
@@ -513,30 +513,13 @@ button.navbar-toggler:focus, button.navbar-toggler:hover {
     cursor: pointer;
 }
 
-@media screen and (prefers-color-scheme: light) {
+@media (forced-colors: active) {
     .swal-button-container {
-        border: 1px solid;
+        border: 1px solid !important;
     }
 
     .swal-modal {
-        border: 1px solid;
-    }
-
-    .swal-icon--warning__body, .swal-icon--warning__dot {
         border: 1px solid !important;
-    }
-    .swal-icon--success__line--long, .swal-icon--success__line--tip {
-        border: 1px solid !important;
-    }
-}
-
-@media screen and (prefers-color-scheme: dark) {
-    .swal-button-container {
-        border: 1px solid;
-    }
-
-    .swal-modal {
-        border: 1px solid;
     }
 
     .swal-icon--warning__body, .swal-icon--warning__dot {
